<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AtualistarActivity"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/atualizar"
            android:textColor="@color/textColor"
            android:textSize="36sp"
            android:textColorHint="@color/texthint"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:src="@drawable/ic_logo_sm"
            app:tint="@color/textColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home"
        android:gravity="center_horizontal">


        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:hint="@string/nome"
            android:padding="16dp"
            android:textColorHint="@color/texthint" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/background_edit_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sexo"
                android:padding="16dp"
                android:textColorHighlight="@color/texthint"
                android:textColorHint="@color/texthint"
                android:textColorLink="@color/texthint" />

            <RadioGroup
                android:id="@+id/editSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="30dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/texthint"
                    android:text="@string/masculino"
                    android:textColor="@color/texthint"
                    android:textColorHighlight="@color/texthint"
                    android:textColorHint="@color/texthint"
                    android:textColorLink="@color/texthint" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:shadowColor="@color/texthint"
                    android:text="@string/feminino"
                    android:textColor="@color/texthint"
                    android:textColorHighlight="@color/texthint"
                    android:textColorHint="@color/texthint"
                    android:textColorLink="@color/texthint" />
            </RadioGroup>

        </LinearLayout>


        <EditText
            android:id="@+id/editOrientacaoSexual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:hint="@string/orienta_o_sexual"
            android:layout_marginTop="10dp"
            android:padding="16dp"
            android:textColorHint="@color/texthint"/>

        <EditText
            android:id="@+id/editRaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:hint="@string/ra_a"
            android:layout_marginTop="10dp"
            android:padding="16dp"
            android:textColorHint="@color/texthint"/>

        <EditText
            android:id="@+id/editDataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/data_de_nascimento"
            android:inputType="date"
            android:padding="16dp"
            android:textColorHint="@color/texthint"
            android:textColorLink="@color/texthint" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cadastrar"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_btn"
        android:fontFamily="@font/nunito_sans_regular"
        android:text="@string/atualizar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:layout_constraintVertical_bias="0.724"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>